# MyEngine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_log.txt  imgui.ini  setting.json  vcpkg.json
.claude/: IMPL_CHECKLIST.txt  SESSION_RULES.txt  settings.json
.claude/hooks/: clear_docs_marker.ps1  inject_impl_checklist.ps1  inject_session_rules.ps1
MyEngine develope rules/2025_0528/: MyEngine_Codebase_Guide.md  MyEngine_Graphics_Roadmap_2026.md  MyEngine_Phase_Dependencies.md  MyEngine_START_HERE.md  MyEngine_Work_Protocol.md
MyEngine develope rules/side/: MyEngine_Foundations_Audit.md  MyEngine_HiZ_PART4_Design.md  MyEngine_INDEX.md  MyEngine_Vulkan13_Modernization.md
assets/3d_models/armors/: armor.glb
assets/3d_models/chests/: locked_chest.glb  unlocked_chest.glb
assets/3d_models/graves/: grave_spirit.glb
assets/3d_models/grips/: fire_grip.glb  light_grip.glb
assets/3d_models/keys/: gold_key.glb  silver_key.glb
assets/3d_models/moneys/: coin.glb  diamond.glb
assets/3d_models/potions/: potion_s.glb
assets/3d_models/rocks/: rock_1.glb
assets/3d_models/shields/: shield_gold.glb  shield_iron.glb  shield_silver.glb
assets/3d_models/spirits/: spirit.glb
assets/3d_models/swords/: sword_std.glb
assets/animations/death_animation/: death.fbx  death.glb
assets/animations/enemy_animation/: enemy_attack.fbx  enemy_attack2.fbx  enemy_idle.fbx  enemy_walk.fbx
assets/animations/falling/: fall.fbx  fall.glb
assets/animations/hit_reaction/: hit_reaction.fbx  hit_reaction.glb
assets/animations/idling/: idle.fbx  idle.glb
assets/animations/jumping/: Jumping.fbx  jump.glb
assets/animations/landing/: land.fbx  land.glb
assets/animations/running/: run.fbx  run.glb
assets/animations/walking/: walk.fbx  walk.glb
include/Core/: game_state.h
include/MyEngine/app/: engine_app.h
include/MyEngine/core/: aabb.h  action_state.h  anim_state.h  attack_def.h  attack_registry.h  camera.h  chest.h  chest_preset.h  components.h  cylinder.h  enemy_hitbox_util.h  equipment_util.h  event_bus.h  game_settings.h  game_state.h  gate.h  grave.h  grave_fx.h  grip.h  input_binding.h  job_system.h  key.h  key_mapping.h  keyboard_mouse_device.h  money.h  obstacle.h  particle.h  potion.h  settings_io.h  spawn_trigger.h  spirit.h  spirit_system.h  water.h
include/MyEngine/loop/: choice_overlay_layer.h  default_layer_factory.h  event_consumer_system.h  game_loop_orchestrator.h  game_over_layer.h  gameplay_layer.h  graphics_settings_layer.h  hud_pipeline.h  key_config_layer.h  layer.h  layer_context.h  layer_factory.h  layer_stack.h  menu_layer_base.h  mode_select_layer.h  render_debug_system.h  settings_layer.h  title_layer.h
include/MyEngine/renderer/: animation.h  animator.h  asset_registry.h  async_compute.h  auto_exposure.h  barrier.h  bc7_texture.h  bindless_texture_registry.h  bloom_pass.h  culling_pass.h  debug_line_pass.h  debug_line_renderer.h  debug_line_vertex.h  debug_utils.h  decal_pass.h  deletion_queue.h  depth_layouts.h  draw_data_pool.h  frame_sync.h  frame_uniforms.h  frustum.h  gbuffer_debug_widget.h  geometry_buffer.h  gpu_skinning.h  hiz_pass.h  hud_draw_list.h  hud_pass.h  hud_system.h  (+48 more)
include/loop/: event_consumer_system.h  game_loop_orchestrator.h
include/systems/: audio_event_system.h  camera_system.h  combat_system.h
shaders/: bloom_blur.frag  bloom_bright.comp  bloom_bright.frag  bloom_downsample.comp  bloom_downsample.frag  bloom_upsample.comp  bloom_upsample.frag  cull.comp  debug_line.frag  debug_line.vert  grass_instanced.frag  grass_instanced.vert  hiz_spd.comp  hiz_spd_wave.comp  hud.frag  hud.vert  particle.frag  particle.vert  post_fullscreen.vert  post_tonemap.frag  scan_globals.comp  scan_local.comp  scan_scatter.comp  shadow.vert  shadow_skinned.vert  skinning.comp  triangle.frag  triangle.vert  triangle_bindless.frag  triangle_bindless.vert  triangle_instanced.frag  triangle_instanced.vert  triangle_skinned.frag  triangle_skinned.vert  water.frag  water.vert  water_reflect.frag
src/: main.cpp
src/app/: engine_app.cpp
src/core/: attack_registry.cpp  chest_preset.cpp  enemy_hitbox_util.cpp  equipment_util.cpp  event_bus.cpp  grave_fx.cpp  grip.cpp  input_binding.cpp  potion.cpp  settings_io.cpp
src/loop/: choice_overlay_layer.cpp  default_layer_factory.cpp  event_consumer_system.cpp  game_loop_orchestrator.cpp  game_over_layer.cpp  gameplay_layer.cpp  graphics_settings_layer.cpp  key_config_layer.cpp  layer_stack.cpp  menu_layer_base.cpp  mode_select_layer.cpp  settings_layer.cpp  title_layer.cpp
src/renderer/: animation.cpp  animator.cpp  asset_registry.cpp  bindless_texture_registry.cpp  bloom_pass.cpp  culling_pass.cpp  debug_line_pass.cpp  debug_utils.cpp  deletion_queue.cpp  frame_sync.cpp  frame_uniforms.cpp  gbuffer_debug_widget.cpp  geometry_buffer.cpp  hiz_pass.cpp  hud_pass.cpp  hud_pipeline.cpp  hzb_debug_widget.cpp  imgui_layer.cpp  indirect_exec.cpp  instance_buffer_pool.cpp  main_pass.cpp  material.cpp  material_registry.cpp  mesh.cpp  model.cpp  model_loader.cpp  model_scale_registry.cpp  overlay_pass.cpp  particle_pass.cpp  pass_chain.cpp  post_pass.cpp  reflection_pass.cpp  reflection_target.cpp  render_target.cpp  resource_factory.cpp  scene_renderer.cpp  shader_util.cpp  shadow_pass.cpp  skeleton.cpp  skin_buffer_pool.cpp  (+12 more)
src/scene/: scene_data.cpp  scene_renderer.cpp
src/systems/: EpicOrchestraGenerator.cpp  anim_state_system.cpp  audio_event_system.cpp  camera_system.cpp  chest_system.cpp  combat_system.cpp  demonVillageBgmGenerator.cpp  enemy_system.cpp  gate_system.cpp  hud_system.cpp  input_system.cpp  item_physics_system.cpp  item_pickup_system.cpp  keyboard_mouse_device.cpp  movement_system.cpp  moving_platform_system.cpp  particle_system.cpp  physics_system.cpp  render_debug_system.cpp  simulation_system.cpp  skeletal_anim_system.cpp  sound_manager.cpp  spawn_system.cpp  spin_animation_system.cpp  spirit_system.cpp
src/world/: MyEngine_START_HERE.md  gameplay_layer_diff.txt  scene_builder_from_world.cpp  stage_registry.cpp  world_builder.cpp  world_terrain.cpp
(+62 files in other folders)
